// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`URLs should be correctly generated when urlSchema is set to auto base, no url prefix, no suffix 1`] = `
Array [
  Array [
    "README.md",
    "/",
  ],
  Array [
    "docs/about.md",
    "/docs/about",
  ],
  Array [
    "docs/custom-url.md",
    "/test-custom/url",
  ],
  Array [
    "docs/how-it-works.md",
    "/docs/how-it-works",
  ],
  Array [
    "docs/static-asset.md",
    "/docs/static-asset",
  ],
  Array [
    "packages/package1/components/button.md",
    "/packages/package1/components/button",
  ],
  Array [
    "packages/package1/docs/intro.md",
    "/packages/package1/docs/intro",
  ],
  Array [
    "packages/package2/docs/overview.md",
    "/packages/package2/docs/overview",
  ],
  Array [
    "packages/package2/docs/styles.md",
    "/packages/package2/docs/styles",
  ],
  Array [
    "packages/package1/components/form/index.md",
    "/packages/package1/components/form/",
  ],
  Array [
    "packages/package1/components/form/something-else.md",
    "/packages/package1/components/form/something-else",
  ],
]
`;

exports[`URLs should be correctly generated when urlSchema is set to auto when source defines url prefix and suffix 1`] = `
Array [
  Array [
    "README.md",
    "/docs/",
  ],
  Array [
    "docs/about.md",
    "/docs/docs/about.html",
  ],
  Array [
    "docs/custom-url.md",
    "/docs/test-custom/url.html",
  ],
  Array [
    "docs/how-it-works.md",
    "/docs/docs/how-it-works.html",
  ],
  Array [
    "docs/static-asset.md",
    "/docs/docs/static-asset.html",
  ],
  Array [
    "packages/package1/components/button.md",
    "/docs/packages/package1/components/button.html",
  ],
  Array [
    "packages/package1/docs/intro.md",
    "/docs/packages/package1/docs/intro.html",
  ],
  Array [
    "packages/package2/docs/overview.md",
    "/docs/packages/package2/docs/overview.html",
  ],
  Array [
    "packages/package2/docs/styles.md",
    "/docs/packages/package2/docs/styles.html",
  ],
  Array [
    "packages/package1/components/form/index.md",
    "/docs/packages/package1/components/form/",
  ],
  Array [
    "packages/package1/components/form/something-else.md",
    "/docs/packages/package1/components/form/something-else.html",
  ],
]
`;
